# grandjury

./: .gitignore  DEVELOPMENT.md  LICENSE  PYPI_GUIDE.md  README.md  build_with_uv.py  pyproject.toml  quick_test.py  test_api_client.ipynb  test_server.ipynb
.github/workflows/: publish.yml
docs/: VERSION_MANAGEMENT.md
grandjury/: __init__.py  api_client.py
pypi/: README.md  pyproject.toml  setup.py
scripts/: build_with_uv.py  bump_version.py  quick_test.py
