[project]
name = "grandjury"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "msgspec>=0.19.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "polar>=0.0.127",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
]
